Some updates before attempt to convert into a React App

--- a/index.html
+++ b/index.html
@@ -155,24 +155,22 @@
   </div>
 
   <div class="project-card">
-    <h3><a href="scriptforge.html">ScriptForge: LLM-Aided Script Writer</a></h3>
+    <h3><a href="scriptforge.html">ScriptForge: Agentic Product for Movie and TV</a></h3>
     <p>A writer assistant tool that helps you draft scripts in multiple formats and genres. Lets you preserve creative control over your style, vision and story while dramatically lowering the time to write a script. <strong>Key differentiator:</strong> fine-grained control over how often the LLM "Writer Agent" takes turns vs. the human writer.</p>
-    <p class="tags">Keywords: LLM agents, ScriptForge, test-time compute, Model Context Protocol, screenwriting, storytelling</p>
+    <p class="tags">Keywords: LLM agents, ScriptForge, test-time compute, Model Context Protocol, screenwriting, storytelling, multi-agent AI systems, OpenAI Agents SDK, LangGraph, LangChain, LangSmith</p>
     <p>
-      <a href="#" target="_blank">
-        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
-      </a>
+      <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px; opacity: 0.4;">
       <span style="font-size: 0.8em; color: #777;">(currently private as I'm exploring potential commercial applications of this product as well as copyright implications)</span>
     </p>
   </div>
 
   <div class="project-card">
-    <h3><a href="#">Head-to-Head Model Evaluator</a></h3>
-    <p>A Hugging Face Space that lets you compare two models—either from Hugging Face or custom uploads—on a selected dataset. Supports built-in or user-defined evaluation scripts. Ideal for benchmarking performance on fine-tuned models or open-weight baselines.</p>
-    <p class="tags">Keywords: model evaluation, custom datasets, Hugging Face, eval harness, LLM comparison</p>
+    <h3><a href="https://huggingface.co/spaces/rohansampath/H2H-eval-comparator">Head-to-Head Model Evaluator</a></h3>
+    <p>A Hugging Face Space that lets you compare two models—either from Hugging Face or custom uploads—on a selected dataset. Supports built-in or user-defined evaluation scripts. Ideal for benchmarking performance on fine-tuned models or open-weight baselines. Built using <a href="https://github.com/vllm-project/vllm" target="_blank">vLLM</a> - a high-throughput and memory-efficient inference engine for LLMs.</p>
+    <p class="tags">Keywords: model evaluation, custom datasets, Hugging Face, eval harness, LLM comparison, vLLM</p>
     <p>
-      <a href="#">
-        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      <a href="https://huggingface.co/spaces/rohansampath/H2H-eval-comparator" target="_blank">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/huggingface.svg" alt="Hugging Face" style="width: 20px; height: 20px;">
       </a>
     </p>
   </div>
@@ -186,6 +184,20 @@
     <p>
       <a href="https://github.com/rohan-sampath/343Canada" target="_blank">
         <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
+    </p>
+  </div>
+
+  <div class="project-card">
+    <h3><a href="mcp-elections-canada.html">Model Context Protocol Server: CanadaElections</a></h3>
+    <p>A Model Context Protocol server that brings Canadian elections data into LLM tools. Specifically tested for use with Claude Desktop. Also powers the MCP client used at threefortythree.ca/chat. <strong>Key feature:</strong> Real-time access to electoral data and polling information.</p>
+    <p class="tags">Keywords: MCP, Model Context Protocol, LLM tools, Canadian elections, Claude Desktop</p>
+    <p>
+      <a href="https://github.com/ThreeFortyThree-Canada/elections-canada-mcp-server" target="_blank">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
+      <a href="https://pypi.org/project/elections-canada-mcp-server/" target="_blank">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/pypi.svg" alt="PyPI" style="width: 20px; height: 20px; margin-left: 10px;">
       </a>
     </p>
   </div>
