--- a/scriptforge.html
+++ b/scriptforge.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScriptForge | Rohan Sampath</title>
+  <title>ScriptForge: Agentic Product for Movie and TV | Rohan Sampath</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -50,11 +50,9 @@
   </style>
 </head>
 <body>
-  <h1>ScriptForge: LLM-Aided Script Writer</h1>
+  <h1>ScriptForge: Agentic Product for Movie and TV</h1>
   <p>
-    <a href="#" target="_blank">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 24px; height: 24px;">
-    </a>
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 24px; height: 24px; opacity: 0.4;">
   </p>
 
   <div class="tabs">
@@ -88,6 +86,19 @@
       <li>Support multiple script formats (screenplay, stage play, TV, etc.)</li>
       <li>Preserve writer's voice and creative vision</li>
       <li>Explore Model Context Protocol for enhanced capabilities</li>
+      <li>Leverage multi-agent AI systems for collaborative writing</li>
+      <li>Implement orchestration using LangGraph and LangChain</li>
+      <li>Utilize OpenAI Agents SDK for advanced agent capabilities</li>
+    </ul>
+    
+    <h2>Technologies</h2>
+    <p>ScriptForge is built with several cutting-edge AI technologies:</p>
+    <ul>
+      <li><strong>LangGraph</strong>: For orchestrating the multi-agent workflow</li>
+      <li><strong>LangChain</strong>: For building the agent framework</li>
+      <li><strong>LangSmith</strong>: For monitoring and debugging agent interactions</li>
+      <li><strong>OpenAI Agents SDK</strong>: For specialized agent capabilities</li>
+      <li><strong>Model Context Protocol</strong>: For enhanced context management</li>
     </ul>
   </div>
 
