A bunch of website updates

--- a/mcp-elections-canada.html
+++ b/mcp-elections-canada.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Model Context Protocol Server: CanadaElections | Rohan Sampath</title>
+  <title>Model Context Protocol (MCP) Server and Client: Elections Canada | Rohan Sampath</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -54,14 +54,12 @@
   </style>
 </head>
 <body>
-  <h1>Model Context Protocol Server: CanadaElections</h1>
+  <h1>Model Context Protocol (MCP) Server and Client: Elections Canada</h1>
   <p class="icon-container">
     <a href="https://github.com/ThreeFortyThree-Canada/elections-canada-mcp-server" target="_blank">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 24px; height: 24px;">
     </a>
-    <a href="https://pypi.org/project/elections-canada-mcp-server/" target="_blank">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/pypi.svg" alt="PyPI" style="width: 24px; height: 24px;">
-    </a>
+    <a href="https://pypi.org/project/elections-canada-mcp-server/" target="_blank" style="margin-left: 10px; font-size: 0.9em;">PyPI</a>
   </p>
 
   <div class="tabs">
