--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
       margin-top: 0;
       color: #6a0dad;
     }
+    .in-progress .project-card h3 {
+      color: #555;
+      font-weight: normal;
+    }
+    .project-card p:not(.tags) {
+      line-height: 1.3;
+      text-align: justify;
+    }
     .project-card .tags {
       font-size: 0.9em;
       color: #777;
@@ -155,97 +163,93 @@
   </div>
 
   <div class="project-card">
-    <h3><a href="scriptforge.html">ScriptForge: Agentic Product for Movie and TV</a></h3>
-    <p>A writer assistant tool that helps you draft scripts in multiple formats and genres. Lets you preserve creative control over your style, vision and story while dramatically lowering the time to write a script. <strong>Key differentiator:</strong> fine-grained control over how often the LLM "Writer Agent" takes turns vs. the human writer.</p>
-    <p class="tags">Keywords: LLM agents, ScriptForge, test-time compute, Model Context Protocol, screenwriting, storytelling, multi-agent AI systems, OpenAI Agents SDK, LangGraph, LangChain, LangSmith</p>
+    <h3><a href="scriptforge.html">ScriptForge: Agentic Screenwriting Assistant for Film & TV</a></h3>
+    <p>A writer assistant that lets you co-author screenplays in multiple genres and formats with fine-grained control over collaboration. Uses a multi-agent architecture with a supervisor agent and multiple specialized worker agents. Built using LangGraph (soon moving to OpenAI Agents SDK), it orchestrates a multi-agent system where a human and LLM "Writer Agent" alternate turns in drafting, rewriting, and structuring scenes.</p>
+    <p>This approach preserves authorial voice and creative direction while drastically reducing the time to a complete screenplay. Includes tooling for test-time LLM selection, turn management protocols, and structured prompt libraries tailored for screenwriting.</p>
+    <p><strong>Key differentiator:</strong> Configurable control over how often the LLM "Writer Agent" takes turns vs. the human writer — useful for both novice and expert screenwriters.</p>
+    <p class="tags">Keywords: LLM agents, LangGraph, LangSmith (observability), Model Context Protocol, multi-agent orchestration, OpenAI Agents SDK</p>
     <p>
       <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px; opacity: 0.4;">
-      <span style="font-size: 0.8em; color: #777;">(currently private as I'm exploring potential commercial applications of this product as well as copyright implications)</span>
+      <span style="font-size: 0.8em; color: #777;">(Repo currently private due to active commercial discussions.)</span>
     </p>
   </div>
 
   <div class="project-card">
-    <h3><a href="https://huggingface.co/spaces/rohansampath/H2H-eval-comparator">Head-to-Head Model Evaluator</a></h3>
-    <p>A Hugging Face Space that lets you compare two models—either from Hugging Face or custom uploads—on a selected dataset. Supports built-in or user-defined evaluation scripts. Ideal for benchmarking performance on fine-tuned models or open-weight baselines. Built using <a href="https://github.com/vllm-project/vllm" target="_blank">vLLM</a> - a high-throughput and memory-efficient inference engine for LLMs.</p>
-    <p class="tags">Keywords: model evaluation, custom datasets, Hugging Face, eval harness, LLM comparison, vLLM</p>
+    <h3><a href="https://huggingface.co/spaces/rohansampath/H2H-eval-comparator">Head-to-Head Model Evaluation Harness</a></h3>
+    <p>A lightweight head-to-head evaluation harness that lets you compare two LLMs—either off-the-shelf or fine-tuned—on a custom dataset. Designed for domain-specific testing (e.g., legal, finance, enterprise), and with curated test cases from non-technical users in mind. For example, a lawyer or financial analyst can define a small evaluation suite and compare model performance without writing code.</p>
+    <p>Built using <a href="https://github.com/vllm-project/vllm" target="_blank">vLLM</a> - a high-throughput and memory-efficient inference engine for LLMs.</p>
+    <p><strong>Key differentiator:</strong> Enables evaluation on custom datasets, not just public benchmarks — ideal for quick comparison and selection of models for specific domains or use cases.</p>
+    <p class="tags">Keywords: Hugging Face, vLLM, model evaluation, custom datasets, eval harness infrastructure</p>
     <p>
       <a href="https://huggingface.co/spaces/rohansampath/H2H-eval-comparator" target="_blank">
-        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/huggingface.svg" alt="Hugging Face" style="width: 20px; height: 20px;">
+        <img class="icon" src="/assets/huggingface-color.png" alt="Hugging Face" style="width: 20px; height: 20px;">
       </a>
+      <span style="font-size: 0.8em; color: #777; margin-left: 5px;">(Hugging Face Space - demo and proof of concept on a single A100 GPU.)</span>
     </p>
   </div>
 
 
 
   <div class="project-card">
-    <h3><a href="#">ThreeFortyThree Canada</a></h3>
-    <p>A website for predicting and modeling Canadian federal elections. Inspired by 338Canada, this project uses statistical methods to aggregate polling data and project seat counts across Canada's 343 electoral districts. <strong>Key feature:</strong> Interactive maps and visualizations of electoral trends.</p>
-    <p class="tags">Keywords: election modeling, data visualization, polling aggregation, Canadian politics, statistical forecasting</p>
+    <h3><a href="threefortythree-canada.html">ThreeFortyThree Canada: Canadian Election Projections and Modelling</a></h3>
+    <p>A seat-by-seat forecasting platform for Canadian federal elections. It combines regional and national polling with historical swing data, incumbent effects, demographic data, and multivariate modeling to simulate likely outcomes across all 343 electoral districts (hence the name). The projection engine uses Monte Carlo simulations to incorporate uncertainty and generate probabilistic seat counts and riding-level forecasts.</p>
+    <p>Users can interactively simulate elections by adjusting party vote shares and observing how seat-by-seat outcomes shift in response.</p>
+    <p><strong>Key features:</strong> Uses a polling aggregation pipeline, combines multivariate distributions and Monte Carlo simulation to model multi-party dynamics. <a href="https://threefortythree.ca/about" target="_blank">Read full methodology here</a></p>
+    <p class="tags">Keywords: React, Node.js, Python backend for Chat (<a href="https://threefortythree.ca/chat" target="_blank">link</a>), Multivariate distributions, Monte Carlo engine, Polling aggregation pipeline</p>
     <p>
-      <a href="https://github.com/rohan-sampath/343Canada" target="_blank">
-        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      <a href="https://threefortythree.ca/" target="_blank">
+        <img class="icon" src="/assets/world-www.svg" alt="Website" style="width: 20px; height: 20px;">
       </a>
+      <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px; opacity: 0.4; margin-left: 10px;">
     </p>
   </div>
 
   <div class="project-card">
-    <h3><a href="mcp-elections-canada.html">Model Context Protocol Server: CanadaElections</a></h3>
-    <p>A Model Context Protocol server that brings Canadian elections data into LLM tools. Specifically tested for use with Claude Desktop. Also powers the MCP client used at threefortythree.ca/chat. <strong>Key feature:</strong> Real-time access to electoral data and polling information.</p>
-    <p class="tags">Keywords: MCP, Model Context Protocol, LLM tools, Canadian elections, Claude Desktop</p>
+    <h3><a href="mcp-elections-canada.html">Model Context Protocol (MCP) Server and Client: Elections Canada</a></h3>
+    <p>A Model Context Protocol server that brings Canadian elections data into LLM tools. Specifically tested for use with Claude Desktop. In addition, a Model Context Protocol Client with a multi-agent architecture that is used at threefortythree.ca/chat. <strong>Key feature:</strong> Fine-grained querying of all electoral and polling data.</p>
+    <p class="tags">Keywords: MCP, Model Context Protocol, LLM tools, Canadian elections, Claude Desktop, multi-agent architecture</p>
     <p>
+      <span>Server: </span>
       <a href="https://github.com/ThreeFortyThree-Canada/elections-canada-mcp-server" target="_blank">
         <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
       </a>
-      <a href="https://pypi.org/project/elections-canada-mcp-server/" target="_blank">
-        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/pypi.svg" alt="PyPI" style="width: 20px; height: 20px; margin-left: 10px;">
+      <a href="https://pypi.org/project/elections-canada-mcp-server/" target="_blank" style="margin-left: 5px; font-size: 0.9em;">PyPI</a>
+      <span style="margin-left: 10px;">Client: </span>
+      <a href="https://threefortythree.ca/chat" target="_blank">
+        <img class="icon" src="/assets/world-www.svg" alt="Web" style="width: 20px; height: 20px; margin-left: 5px;">
       </a>
     </p>
   </div>
 
   <h3 style="margin-top: 40px; padding-bottom: 10px; border-bottom: 1px solid #ddd;">In Progress</h3>
   
-  <div class="project-card">
-    <h3><a href="#">Inference Time & Cost Estimator</a></h3>
-    <p>A calculator-style tool that estimates the latency and cost of running various ML models on different hardware. Input model size, architecture type, batch size, and hardware profile to get real-time insights on cost-performance tradeoffs.</p>
-    <p class="tags">Keywords: latency, inference cost, model architecture, hardware benchmarking, deployment planning</p>
-    <p>
-      <a href="#">
-        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
-      </a>
-    </p>
+  <div class="in-progress">
+    <div class="project-card">
+      <h3>Inference Time & Cost Estimator</h3>
+      <p>A calculator-style tool that estimates the latency and cost of running various ML models on different hardware. Input model size, architecture type, batch size, and hardware profile to get real-time insights on cost-performance tradeoffs.</p>
+      <p class="tags">Keywords: latency, inference cost, model architecture, hardware benchmarking, deployment planning</p>
+
+    </div>
+
+    <div class="project-card">
+      <h3>DistillKit: Knowledge Distillation Library</h3>
+      <p>A plug-and-play Python library to distill knowledge from larger teacher models into smaller, deployable student models.</p>
+      <p class="tags">Keywords: knowledge distillation, teacher and student models</p>
+
+    </div>
   </div>
 
-  <div class="project-card">
-    <h3><a href="#">DistillKit: Knowledge Distillation Library</a></h3>
-    <p>A plug-and-play Python library to distill knowledge from larger teacher models into smaller, deployable student models. Features include custom loss functions, selective layer distillation, and task-specific distillation protocols.</p>
-    <p class="tags">Keywords: distillation, model compression, student-teacher learning, deployment-ready, efficiency</p>
-    <p>
-      <a href="#">
-        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
-      </a>
-    </p>
-  </div>
 
-  <div class="project-card">
-    <h3><a href="#">Replicating DeepSeek-R1</a></h3>
-    <p>An attempt to replicate the performance of DeepSeek-R1, a language model optimized for reasoning and retrieval. Work includes dataset reconstruction, tokenizer matching, and model architecture alignment to reproduce benchmark scores.</p>
-    <p class="tags">Keywords: DeepSeek, replication, reasoning models, transformer architectures, eval results</p>
-    <p>
-      <a href="#">
-        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
-      </a>
-    </p>
-  </div>
 </div>
   
   <div id="other" class="tab-content" style="display:none;">
     <p><strong>🧠 Interests:</strong> My other interests include Linguistics, Psephology (Election Analysis), Cartography, Skiing, Swimming, Tennis, and Road Biking. I've done several multi-day road bike tours (SF to LA, Oregon Coast, Vancouver Island). </p>
 
-    <p>I created <a href="https://github.com/rohan-sampath/india-constituencies-game" target="_blank">Guess the Constituency</a> — a game for the Indian General Election 2024, and I'm currently working on <a href="https://github.com/rohan-sampath/343Canada" target="_blank">343Canada</a> — a website to predict and model Canadian federal elections.</p>
+    <p>I created <a href="https://threefortythree.ca" target="_blank">ThreeFortyThree Canada</a>, a seat-by-seat election forecasting platform for Canadian federal elections. It uses multivariate modeling and Monte Carlo simulation to translate national and regional polling into seat-level projections across all 343 electoral districts in Canada. I also created <a href="https://github.com/rohan-sampath/india-constituencies-game" target="_blank">Guess the Constituency</a> - a game for the Indian General Election, 2024.</p>
 
-    <p><strong>🎙️ Podcast:</strong> I hosted the <a href="https://open.spotify.com/show/7uTvcZ0wzAWS647bNCgNIh" target="_blank">AIs Wide Open Podcast</a>, where I spoke with CEOs and executives about how they’re deploying AI in their businesses, as well as with academics on emerging trends in AI. Past guests include the CEOs of <a href="https://www.g2.com" target="_blank">G2</a>, <a href="https://www.pandadoc.com" target="_blank">PandaDoc</a>, <a href="https://www.people.ai" target="_blank">People.ai</a>, and <a href="https://www.degreed.com" target="_blank">Degreed</a> — all companies with $1B+ valuations. As of Jan 2025, the podcast has been downloaded 20,000+ times. </p>
+    <p><strong>🎙️ Podcast:</strong> I hosted the <a href="https://open.spotify.com/show/7uTvcZ0wzAWS647bNCgNIh" target="_blank">AIs Wide Open Podcast</a>, where I spoke with CEOs and executives about how they’re deploying AI in their businesses, as well as with academics on emerging trends in AI. Past guests include the CEOs of <a href="https://www.g2.com" target="_blank">G2</a>, <a href="https://www.pandadoc.com" target="_blank">PandaDoc</a>, <a href="https://www.people.ai" target="_blank">People.ai</a>, and <a href="https://www.degreed.com" target="_blank">Degreed</a> — all companies with $1B+ valuations. As of May 2025, the podcast has been downloaded 25,000+ times. </p>
 
-    <p>🌍 I'm a <a href="https://en.wikipedia.org/wiki/Third_culture_kid" target="_blank">Third Culture Kid</a> — I've lived in 4 countries (US, Canada, UAE, and India), and speak 4 languages (English, Hindi, Tamil, and Arabic).</p>
+    <p>🌍 I'm a <a href="https://en.wikipedia.org/wiki/Third_culture_kid" target="_blank">Third Culture Individual</a> — I've lived in 4 countries (US, Canada, UAE, and India), and speak 4 languages (English, Hindi, Tamil, and Arabic).</p>
   </div>
 
   <script>
